--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "test": "mocha --compilers js:babel-core/register --ui tdd homework/*Tests.js"
+  },
   "name": "application-name",
   "version": "0.0.1",
   "dependencies": {
